--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,7 +6,7 @@
         android:id="@+id/action_profile"
         android:title="Mon profil"
         android:icon="@drawable/ic_user"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_settings"
@@ -21,11 +21,13 @@
     <item
         android:id="@+id/action_favorites"
         android:title="Favoris"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_heart_filled"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/action_borrow_history"
         android:title="Historique d'emprunt"
+        android:icon="@drawable/ic_clock"
         app:showAsAction="never" />
     
     <item
