--- a/app/src/main/res/layout/layout_bottom_nav.xml
+++ b/app/src/main/res/layout/layout_bottom_nav.xml
@@ -5,8 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/bottom_nav_background"
-    app:itemIconTint="@color/text_primary"
+    app:itemIconTint="@color/bottom_nav_item_color"
     app:itemRippleColor="@color/accent"
-    app:itemTextColor="@color/text_primary"
+    app:itemTextColor="@color/bottom_nav_item_color"
+    app:itemActiveIndicatorStyle="@style/BottomNav.ActiveIndicator"
+    app:itemIconSize="24dp"
+    app:itemTextAppearanceActive="@style/TextAppearance.MaterialComponents.Caption"
+    app:itemTextAppearanceInactive="@style/TextAppearance.MaterialComponents.Caption"
     app:labelVisibilityMode="labeled"
     app:menu="@menu/bottom_menu" />
