--- a/app/src/main/res/drawable/gradient_primary_accent.xml
+++ b/app/src/main/res/drawable/gradient_primary_accent.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/primary"
-        android:endColor="@color/accent"
+        android:startColor="@color/accent"
+        android:endColor="@color/primary"
         android:angle="135"
         android:type="linear" />
     <corners android:radius="@dimen/radius_large" />
