--- a/app/src/main/res/layout/activity_borrow_history.xml
+++ b/app/src/main/res/layout/activity_borrow_history.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="0dp"
+    android:background="@color/background">
+
+    <!-- Header removed as requested -->
 
     <TextView
         android:id="@+id/title"
@@ -12,7 +16,7 @@
         android:text="Historique"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_marginBottom="16dp" />
+        android:layout_margin="16dp" />
 
     <include
         layout="@layout/layout_bottom_nav"
