--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -32,5 +32,5 @@
 
     <!-- UI specific helpers -->
     <color name="toolbar_color">#000000</color>
-    <color name="bottom_nav_background">#121212</color>
+    <color name="bottom_nav_background">@color/accent</color>
 </resources>
